@@ -1,0 +1,17 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<software>
+    <metadata>
+        <name>eZ Star Rating</name>
+        <version>2.1.0alpha1</version>
+        <copyright>Copyright (C) 2008 Bruce Morrison, 2009 eZ Systems AS</copyright>
+        <license>GNU General Public License v2.0</license>
+        <info_url>http://projects.ez.no/ezstarrating</info_url>
+    </metadata>
+
+    <dependencies>
+        <requires>
+            <extension name="ezjscore" />
+        </requires>
+    </dependencies>
+
+</software>
